resolved #22
